--- a/tags.html
+++ b/tags.html
@@ -60,6 +60,16 @@
         <td>表のデータ（table data）</td>
         <td>この中に表のセルデータを置く</td>
       </tr>
+      <tr>
+        <td><code>header</code></td>
+        <td>ヘッダー（header）</td>
+        <td>ヘッダーであることを示す</td>
+      </tr>
+      <tr>
+        <td><code>div</code></td>
+        <td>コンテンツ区分要素（division）</td>
+        <td>ひとかたまりのブロック要素とする</td>
+      </tr>
     </table>
 
     <h2>インライン要素（inline element）</h2>
@@ -120,6 +130,15 @@
           <code>&lt;code&gt;print('Hello World!');&lt;/code&gt;</code>
         </td>
         <td><code>print('Hello World!');</code></td>
+      </tr>
+      <tr>
+        <td><code>span</code></td>
+        <td>コンテンツ区分要素（span）</td>
+        <td>ひとかたまりのインライン要素とする</td>
+        <td>
+          <code>&lt;span&gt;装飾しそうな文章&lt;/span&gt;</code>
+        </td>
+        <td><span>装飾しそうな文章</span></td>
       </tr>
     </table>
   </body>
