--- a/tags.html
+++ b/tags.html
@@ -70,6 +70,21 @@
         <td>コンテンツ区分要素（division）</td>
         <td>ひとかたまりのブロック要素とする</td>
       </tr>
+      <tr>
+        <td><code>ol</code></td>
+        <td>順序付きリスト（ordered list）</td>
+        <td>この中に順序のあるリストを置く</td>
+      </tr>
+      <tr>
+        <td><code>ul</code></td>
+        <td>順序なしリスト（unordered list）</td>
+        <td>この中に順序のないリストを置く</td>
+      </tr>
+      <tr>
+        <td><code>li</code></td>
+        <td>リストの項目（list item）</td>
+        <td>この中にリストの項目を置く</td>
+      </tr>
     </table>
 
     <h2>インライン要素（inline element）</h2>
