Finish the sample website

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     </head>
     <body>
       <div class="nav-menu">
-        <a href="index.html" style="text-decoration: none; color: blue;">homeページ</a>
-        <a href="tags.html" class="nav-spacing">HTMLタグ一覧</a>
-        <a href="moby_dick.html" class="nav-spacing">読書案内『Moby Dick』</a>
+        <a href="index.html">homeページ</a>
+        <a href="tags.html" class="nav nav-spacing">HTMLタグ一覧</a>
+        <a href="moby_dick.html" class="nav nav-spacing">読書案内『Moby Dick』</a>
       </div>
 
       <h1>Learn Enoughのあらまし</h1>
@@ -22,8 +22,8 @@
         確信しています。この運動に参加したい方は、今すぐ<a href="https://learnenough.com/email">公式メーリングリストにサインアップをお願いします</a>。
       </p>
       <p>
-        <a href="https://twitter.com/RailsTutorialJP" target="_blank"
-        rel="noopener" style="text-decoration: none;">
+        <a href="https://twitter.com/RailsTutorialJP" class="image-link" target="_blank"
+        rel="noopener">
           <img src="images/small_twitter_logo.png" alt="twitterロゴ">
         </a>
         RailsチュートリアルのTwitterフォローをお願いします:
