--- a/moby_dick.html
+++ b/moby_dick.html
@@ -3,17 +3,18 @@
   <head>
     <title>Moby Dick（白鯨）</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <div style="text-align: right;">
-      <a href="index.html" style="text-decoration: none; color: blue;">homeページ</a>
-      <a href="tags.html" style="margin-left: 10px; text-decoration: none; color: blue;">HTMLタグ一覧</a>
-      <a href="moby_dick.html" style="margin-left: 10px; text-decoration: none; color: blue;">読書案内『Moby Dick』</a>
+    <div class="nav-menu">
+      <a href="index.html">homeページ</a>
+      <a href="tags.html"  class="nav nav-spacing">HTMLタグ一覧</a>
+      <a href="moby_dick.html"  class="nav nav-spacing">読書案内『Moby Dick』</a>
     </div>
 
-    <header style="margin: 0 0 80px;">
-      <h1 style="text-align: center;">Softcover読書案内</h1>
-      <h2 style="text-align: center;">Moby-Dick（白鯨）</h2>
+    <header>
+      <h1>Softcover読書案内</h1>
+      <h2>Moby-Dick（白鯨）</h2>
     </header>
 
     <div>
@@ -31,18 +32,16 @@
     </div>
 
     <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg">
-      <img src="images/sperm_whales.jpg" alt="マッコウクジラ" 
-      style="display: block; margin: 0 auto;">
+      <img class="image-center" src="images/sperm_whales.jpg" alt="マッコウクジラ">
     </a>
 
-    <div style="width: 560px; margin: 20px auto; padding: 30px; background-color: #FAFAFA;">
+    <div class="appendix">
 
       <h3>Moby-Dick（白鯨）: 海にまつわる昔話</h3>
 
       <a href="https://www.softcover.io/read/6070fb03/moby-dick"
         target="_blank" rel="noopener">
-        <img src="images/moby_dick.png" alt="Moby-Dick（白鯨）" height="200px" 
-        style="float: left; margin-right: 40px;">
+        <img src="images/moby_dick.png" alt="Moby-Dick（白鯨）">
       </a>
 
       <p>
@@ -51,10 +50,9 @@
         <em>Moby-Dick</em></a>（白鯨）』は以下の不滅の一文から始まります。
       </p>
 
-      <blockquote style="font-style: italic; font-size: 20px;">
+      <blockquote>
         <p>
-          <span style="font-style: normal; font-size: 24px; font-weight: bold; color: #FF0000;">
-          イシュマエルと呼んでくれ。</span>あれは何年か前のことだったかな、当時のわしはすってんてんで、
+          <span class="quote-strong">イシュマエルと呼んでくれ。</span>あれは何年か前のことだったかな、当時のわしはすってんてんで、
           陸にいても面白くも何ともなかったんで、しばらく船に乗って世界中の海を見て回ってやろうと思っとった。
           腹の虫がおさまらんときはそうすることにしとる。
         </p>
